# plast

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  libplast.pc.in  main.c  plastc  pyproject.toml  requirements.txt  setup.py  test_modular_xor.py  test_xor.py  train_mnist.py  xor_weights.plast
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: release.yml  tag-on-merge.yml  tests.yml
docs/: quickguide.md
examples/: Makefile  conv_mnist  conv_mnist.c  conv_mnist_weights.plast  rl_policy_network  rl_policy_network.c  xor  xor.c  xor_weights.plast
experiments/: ua1893uae134.yaml
experiments/modular_xor/: summary.yaml
experiments/modular_xor/run_002/: config.yaml
experiments/modular_xor/run_005/: metrics.yaml
experiments/modular_xor/run_007/: metrics.yaml
include/: arena.h  definitions.h  node.h  op.h  tensor.h
include/autograd/cuda/binary/: common.cuh
include/autograd/cuda/reduction/: common.cuh
include/core/: arena.h  arena_cpu.h  arena_cuda.h  definitions.h  graph.h  node.h  op.h  ops.def  tensor.h
include/data/: dataloader.h  dataset.h
include/kernels/: abs.h  add.h  broadcast.h  conv2d.h  cos.h  cpu_utils.h  div.h  exp.h  expand.h  flatten.h  iter.h  kernel_macros.h  kernel_types.h  leaky_relu.h  log.h  matmul.h  max.h  mean.h  min.h  mul.h  neg.h  pack.h  sin.h  squeeze.h  sub.h  sum.h  tan.h  transpose.h  unsqueeze.h  view.h
include/kernels/cpu/: cpu_tensor_init.h
include/kernels/cuda/: cuda_check.h  cuda_iter.cuh  cuda_tensor_init.h  cuda_utils.cuh
include/kernels/ops/: binary.h  reduce.h  shape.h  unary.h
include/optimizers/: adam.h  adamw.h  sgd.h  zero_grad.h
include/plast/: loss.h  model.h  optim.h  plast.h
include/plast/core/: data_buffer.h  device_management.h  shape_utils.h  shape_utils_c.h  shape_utils_cpp.h  types.h
include/plast/execution/: engine.h
include/plast/graph/: node.h
include/plast/kernels/cpu/: binary_kernels.h  broadcast_kernels.h  expand_kernels.h  reduction_kernels.h  unary_kernels.h
include/plast/kernels/cuda/: binary_kernels.h  broadcast_kernels.h  cuda_kernel_utils.h  expand_kernels.h  unary_kernels.h
include/plast/ops/: base_op.h
include/plast/ops/binary/: add.h  matmul.h  mul.h  sub.h
include/plast/ops/init/: init_ops.h
include/plast/ops/movement/: broadcast.h  expand.h  squeeze.h  unsqueeze.h  view.h
include/plast/ops/reduction/: max.h  mean.h  min.h  sum.h
include/plast/tensor/: tensor.h
include/scheduler/: fusion.h  jit.h  scheduler.h
models/: ffn_mnist_model.pkl
plast/: __init__.py  _internal.py  functions.py  nn.py  optim.py  tensor.py  tensor_ops.py
plast.egg-info/: PKG-INFO  SOURCES.txt
plast/core/: device.py  tensor.py
plast/cpp_bindings/: pybind_module.cpp
plast/data/: __init__.py  dataloader.py  dataset.py
plast/experiment/: __init__.py  config.py  tracker.py  yaml_utils.py
plast/nn/: __init__.py  activation.py  activations.py  container.py  conv.py  dropout.py  functional.py  init.py  linear.py  loss.py  module.py  normalization.py  pipeline.py
plast/ops/: __init__.py
plast/optim/: __init__.py  adam.py  adamw.py  lr_scheduler.py  optimizer.py  sgd.py
plast/utils/: __init__.py  model_io.py
src/: arena.c  arena_cpu.c  arena_cuda.cu  graph.c  node.c  op.c  tensor.c
src/api/: loss.c  model.c  optim.c  serialization.c
src/autograd/cuda/binary/: add.cu  div.cu  matmul.cu  mul.cu  pow.cu  rdiv.cu  sub.cu
src/autograd/cuda/reduction/: max.cu  max_full.cu  mean.cu  mean_full.cu  sum.cu  sum_full.cu
src/autograd/cuda/unary/: abs.cu  clip.cu  exp.cu  log.cu  neg.cu  relu.cu
src/core/: arena.c  arena_cpu.c  arena_cuda.cu  graph.c  node.c  op.c  tensor.c
src/data/: dataset.c
src/kernels/cpu/: abs.c  add.c  binary_ops.c  broadcast.c  conv2d.c  cos.c  cpu_utils.c  div.c  exp.c  expand.c  flatten.c  fused_ops.c  iter.c  leaky_relu.c  log.c  matmul.c  max.c  mean.c  min.c  mul.c  neg.c  pack.c  reduce_ops.c  shape_ops.c  sin.c  squeeze.c  sub.c  sum.c  tan.c  transpose.c  unary_ops.c  unsqueeze.c  view.c
src/kernels/cuda/: abs.cu  add.cu  binary_ops.cu  conv2d.cu  conv_relu.cu  cos.cu  cuda_iter_init.cu  cuda_pack.cu  cuda_tensor_init.cu  div.cu  exp.cu  leaky_relu.cu  log.cu  matmul.cu  matmul_bias_relu.cu  matmul_relu.cu  max.cu  mean.cu  min.cu  mul.cu  neg.cu  reduce_ops.cu  shape_ops_cuda.cu  sin.cu  sub.cu  sum.cu  tan.cu  unary_ops.cu
src/ops/cuda/binary/: add.cu  div.cu  matmul.cu  mul.cu  pow.cu
src/optimizers/cpu/: adam.c  adamw.c  sgd.c
src/optimizers/cuda/: adam.cu  adamw.cu  sgd.cu
src/plast/core/: device_management.cpp  shape_utils.cpp
src/plast/execution/: engine.cpp
src/plast/graph/: node.cpp
src/plast/kernels/cpu/: abs_kernels.c  add_kernels.c  broadcast_kernels.c  exp_kernels.c  expand_kernels.c  leaky_relu_kernels.c  log_kernels.c  matmul_kernels.c  max_kernels.c  mean_kernels.c  min_kernels.c  mul_kernels.c  relu_kernels.c  sub_kernels.c  sum_kernels.c
src/plast/kernels/cuda/: add_kernels.cu  broadcast_kernels.cu  cuda_kernel_utils.cu  expand_kernels.cu  init_kernels.cu  matmul_kernels.cu  mul_kernels.cu  sub_kernels.cu
src/plast/ops/binary/: add.cpp  matmul.cpp  mul.cpp  sub.cpp
src/plast/ops/init/: init.cpp
src/plast/ops/movement/: broadcast.cpp  expand.cpp  squeeze.cpp  unsqueeze.cpp  view.cpp
src/plast/ops/reduction/: max.cpp  mean.cpp  min.cpp  sum.cpp
src/plast/ops/unary/: abs.cpp  exp.cpp  leaky_relu.cpp  log.cpp  relu.cpp
src/plast/tensor/: tensor.cpp
src/python/: bindings.cpp
src/scheduler/: fusion.c  jit.c  scheduler.c
tests/: conftest.py  test_core.py  test_data.py  test_e2e.py  test_edge_cases.py  test_experiment.py  test_gradients.py  test_nn.py  test_ops.py  test_optim.py  test_tensor.py
