[build-system]
requires = ["setuptools>=64", "pybind11>=2.10", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "plast"
version = "0.1.0"
description = "A lightweight C/CUDA tensor library with Python bindings"
authors = [{ name = "Vixel", email = "vixel@example.com" }]
dependencies = ["numpy"]

[tool.setuptools]
packages = ["plast"]
