[build-system]
requires = ["setuptools>=64", "pybind11>=2.10", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplast"
version = "0.1.1"
requires-python = ">=3.12"
description = "A lightweight C/CUDA tensor library with Python bindings"
readme = "README.md"
authors = [{ name = "Vixel", email = "yusufshihata2006@gmail.com" }]
license = { text = "MIT" }
keywords = ["tensor", "deep-learning", "autograd", "cuda", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/Vixel2006/plast"
Repository = "https://github.com/Vixel2006/plast"

[tool.setuptools]
packages = ["plast"]

[project.optional-dependencies]
test = ["pytest", "pytest-timeout", "numpy"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "cuda: marks tests that require CUDA (skipped if no GPU)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
